--- a/WinFormAppTeacherPortalForStudentRecords.csproj
+++ b/WinFormAppTeacherPortalForStudentRecords.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeacherPortal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeacherPortal.Designer.cs">
+      <DependentUpon>TeacherPortal.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
